<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KanjiToast</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_about">About</string>
    <string name="pref_summary_run_service">Turns the kanji lookup service on or off.</string>
    <string name="pref_title_run_service">Service</string>
    <string name="pref_key_run_service">pref_key_run_service</string>
    <string name="service_started">Service started</string>
    <string name="service_stopped">Service stopped</string>
    <string name="pref_key_keyword_length">pref_key_keyword_length</string>
    <string name="pref_default_keyword_length">Short</string>
    <string name="pref_key_start_service_boot">pref_key_start_service_boot</string>
    <string name="pref_key_kana_enabled">pref_key_kana_enabled</string>

    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="pref_title_kana_enabled">Enable kana lookup</string>
    <string name="pref_summary_kana_enabled">If hiragana and katakana should be looked up.</string>
    <string name="pref_title_start_service_boot">Start service at boot</string>
    <string name="pref_summary_start_service_boot">Whether to start the service at system startup or not.</string>
    <string name="pref_title_keyword_length">Keyword display duration</string>
    <string name="pref_summary_keyword_length">How long the keyword should be displayed.</string>

    <string name="about_title">KanjiToast 1.0</string>
    <string name="about_text">
        This app is open source. To access the source code or post bug reports,
        visit <a href="https://github.com/kl/KanjiToast">http://github.com/kl/KanjiToast</a>
    </string>

</resources>
